Fix alignment style

--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,25 @@
   border: 1px solid #dddddd;
 }
 
+.rabbit-lyrics--center {
+  text-align: center;
+}
+
+.rabbit-lyrics--left {
+  text-align: left;
+}
+
+.rabbit-lyrics--right {
+  text-align: right;
+}
+
 .rabbit-lyrics__line {
   line-height: 1.5em;
   min-height: 1.5em;
   padding: 0 1em;
 }
 
-.rabbit-lyrics:not(.rabbit-lyrics--mini) .rabbit-lyrics__line--active {
+.rabbit-lyrics__line--active {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -37,7 +49,8 @@
 }
 
 .rabbit-lyrics--mini .rabbit-lyrics__line--active {
-  display: inline-block;
+  display: block;
+  background: transparent;
 }
 
 /* Full view mode, no scroll bar */
